adding nav bar entry (#3)
Signed-off-by: Matthias Wessendorf <mwessend@redhat.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -280,6 +280,7 @@ nav:
         - KReference.Group field: eventing/experimental-features/kreference-group.md
         - Knative reference mapping: eventing/experimental-features/kreference-mapping.md
         - EventType auto creation: eventing/experimental-features/eventtype-auto-creation.md
+        - Transport Encryption: eventing/experimental-features/transport-encryption.md
     # Eventing reference docs
       - Reference:
         - Eventing API: eventing/reference/eventing-api.md
