--- a/code-samples/community/serving/helloworld-dart/pubspec.yaml
+++ b/code-samples/community/serving/helloworld-dart/pubspec.yaml
@@ -1,15 +1,15 @@
 name: hello_world_dart
-publish_to: none # let's not accidentally publish this to pub.dartlang.org
+publish_to: none # Avoid accidentally publishing this to pub.dev
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ^3.0.0
 
 dependencies:
-  args: ^2.0.0
-  shelf: ^1.1.0
-  shelf_router: ^1.0.0
+  args: ^2.3.0
+  shelf: ^1.4.0
+  shelf_router: ^1.1.0
 
 dev_dependencies:
   http: ^0.13.0
   lints: ^2.0.0
-  test: ^1.15.0
+  test: ^1.21.0
