--- a/code-samples/community/serving/helloworld-r/Dockerfile
+++ b/code-samples/community/serving/helloworld-r/Dockerfile
@@ -3,6 +3,9 @@
 # https://hub.docker.com/_/golang
 FROM golang:1.12 as builder
 
+ARG TARGETOS
+ARG TARGETARCH
+
 # Copy local code to the container image.
 WORKDIR /go/src/github.com/knative/docs/helloworld-r
 COPY invoke.go .
@@ -10,7 +13,7 @@ COPY invoke.go .
 # Build the command inside the container.
 # (You may fetch or manage dependencies here,
 # either manually or with a tool like "godep".)
-RUN CGO_ENABLED=0 GOOS=linux go build -v -o invoke
+RUN CGO_ENABLED=0 GOOS=linux GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -v -o invoke
 
 # The official R base image
 # https://hub.docker.com/_/r-base
