--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -48,6 +48,7 @@ nav:
       - Articles:
           - articles/knative-eventing-vision.md
           - articles/new_event_discovery_features.md
+          - articles/getting-started-blog-p2.md
           - articles/getting-started-blog-p1.md
           - articles/getting-started-blog-p0.md
           - articles/improved-ha-configuration.md
