--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,18 +67,15 @@ plugins:
 copyright: "Copyright © 2022 The Knative Authors"
 
 extra:
-  social:
-    - icon: |
-        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-        <path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/>
-        </svg>
-      link: https://twitter.com/KnativeProject
-    - icon: fontawesome/brands/github
-      link: https://github.com/knative/community
-      name: Knative Community on Github
-    - icon: fontawesome/brands/slack
-      link: https://slack.cncf.io
-      name: Slack
+  # social:
+    # - icon: fontawesome/brands/twitter
+    #   link: https://twitter.com/KnativeProject
+    # - icon: fontawesome/brands/github
+    #   link: https://github.com/knative/community
+    #   name: Knative Community on Github
+    # - icon: fontawesome/brands/slack
+    #   link: https://slack.cncf.io
+    #   name: Slack
   # TODO: Replace with https://github.com/mkdocs/mkdocs/pull/2267 once mkdocs 1.2 is out.
   version_warning: !!python/object/apply:os.getenv ["VERSION_WARNING"]
   knative_version: !!python/object/apply:os.getenv ["KNATIVE_VERSION"]
