--- a/code-samples/serving/gitwebhook-go/Dockerfile
+++ b/code-samples/serving/gitwebhook-go/Dockerfile
@@ -14,6 +14,10 @@
 
 FROM golang AS builder
 
+# Add a user so the server will run as a non-root user.
+RUN addgroup -g 1000 appuser && \
+    adduser -S -u 1000 -G appuser appuser
+
 ARG TARGETOS
 ARG TARGETARCH
 
@@ -32,7 +36,13 @@ RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -o /go/bin/webh
 
 FROM golang:alpine
 
+# Add a user so the server will run as a non-root user.
+RUN addgroup -g 1000 appuser && \
+    adduser -S -u 1000 -G appuser appuser
+
 EXPOSE 8080
 COPY --from=builder /go/bin/webhook-sample /app/webhook-sample
+
+USER appuser
 
 ENTRYPOINT ["/app/webhook-sample"]
