--- a/code-samples/serving/hello-world/helloworld-python/Dockerfile
+++ b/code-samples/serving/hello-world/helloworld-python/Dockerfile
@@ -2,6 +2,10 @@
 # https://hub.docker.com/_/python
 FROM python:3.7-slim
 
+# Add a user so the server will run as a non-root user.
+RUN addgroup -g 1000 appuser && \
+    adduser -S -u 1000 -G appuser appuser
+
 # Allow statements and log messages to immediately appear in the Knative logs
 ENV PYTHONUNBUFFERED True
 
@@ -12,6 +16,8 @@ COPY . ./
 
 # Install production dependencies.
 RUN pip install Flask gunicorn
+
+USER appuser
 
 # Run the web service on container startup. Here we use the gunicorn
 # webserver, with one worker process and 8 threads.
