--- a/code-samples/serving/cloudevents/cloudevents-dotnet/Dockerfile
+++ b/code-samples/serving/cloudevents/cloudevents-dotnet/Dockerfile
@@ -13,6 +13,11 @@
 # limitations under the License.
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS build-env
+
+# Add a user so the server will run as a non-root user.
+RUN addgroup -g 1000 appuser && \
+    adduser -S -u 1000 -G appuser appuser
+
 WORKDIR /app
 
 # Copy csproj and restore as distinct layers
@@ -25,6 +30,14 @@ RUN dotnet publish -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine
+
+# Add a user so the server will run as a non-root user.
+RUN addgroup -g 1000 appuser && \
+    adduser -S -u 1000 -G appuser appuser
+
 WORKDIR /app
 COPY --from=build-env /app/out .
+
+USER appuser
+
 ENTRYPOINT ["dotnet", "CloudEventsSample.dll"]
