--- a/code-samples/serving/cloudevents/cloudevents-go/Dockerfile
+++ b/code-samples/serving/cloudevents/cloudevents-go/Dockerfile
@@ -3,6 +3,10 @@
 # https://hub.docker.com/_/golang
 FROM golang:1.13 as builder
 
+# Add a user so the server will run as a non-root user.
+RUN addgroup -g 1000 appuser && \
+    adduser -S -u 1000 -G appuser appuser
+
 ARG TARGETOS
 ARG TARGETARCH
 
@@ -25,10 +29,17 @@ RUN go mod download
 # https://hub.docker.com/_/alpine
 # https://docs.docker.com/develop/develop-images/multistage-build/#use-multi-stage-builds
 FROM alpine:3
+
+# Add a user so the server will run as a non-root user.
+RUN addgroup -g 1000 appuser && \
+    adduser -S -u 1000 -G appuser appuser
+
 RUN apk add --no-cache ca-certificates
 
 # Copy the binary to the production image from the builder stage.
 COPY --from=builder /app/server /server
+
+USER appuser
 
 # Run the web service on container startup.
 CMD ["/server"]
