--- a/code-samples/serving/multi-container/servingcontainer/Dockerfile
+++ b/code-samples/serving/multi-container/servingcontainer/Dockerfile
@@ -3,6 +3,10 @@
 # https://hub.docker.com/_/golang
 FROM golang:1.15 as builder
 
+# Add a user so the server will run as a non-root user.
+RUN addgroup -g 1000 appuser && \
+    adduser -S -u 1000 -G appuser appuser
+
 ARG TARGETOS
 ARG TARGETARCH
 
@@ -25,10 +29,17 @@ RUN CGO_ENABLED=0 GOOS=linux GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -mod
 # https://hub.docker.com/_/alpine
 # https://docs.docker.com/develop/develop-images/multistage-build/#use-multi-stage-builds
 FROM alpine:3
+
+# Add a user so the server will run as a non-root user.
+RUN addgroup -g 1000 appuser && \
+    adduser -S -u 1000 -G appuser appuser
+
 RUN apk add --no-cache ca-certificates
 
 # Copy the binary to the production image from the builder stage.
 COPY --from=builder /app/servingcontainer /servingcontainer
+
+USER appuser
 
 # Run the web service on container startup.
 CMD ["/servingcontainer"]
