--- a/.github/workflows/knative-docs-image.yaml
+++ b/.github/workflows/knative-docs-image.yaml
@@ -8,6 +8,7 @@ on:
     - "docs/serving/autoscaling/autoscale-go/**"
     - "hack/docker/**"
     - ".github/workflows/knative-docs-image.yaml"
+    - "requirements.txt"
 
 jobs:
   build-and-push-image:
