fix some hello-world samples' Dockerfile to run as non-root user
Update README.md file when necessary

--- a/code-samples/serving/hello-world/helloworld-java-spark/Dockerfile
+++ b/code-samples/serving/hello-world/helloworld-java-spark/Dockerfile
@@ -15,13 +15,27 @@ RUN mvn package -DskipTests
 # https://docs.docker.com/develop/develop-images/multistage-build/#use-multi-stage-builds
 FROM openjdk:8-jre-alpine
 
+ARG USER=appuser
+ARG USER_UID=1001
+ARG USER_GID=$USER_UID
+
+ENV PORT=8080
+
+# Create and change to the app directory.
+WORKDIR "/home/${USER}/app"
+
+# Add a user so the server will run as a non-root user.
+RUN addgroup -g $USER_GID $USER && \
+    adduser -u $USER_UID -G $USER -D $USER
+
 # Copy the jar to the production image from the builder stage.
-COPY --from=builder /app/target/helloworld-0.0.1-SNAPSHOT-jar-with-dependencies.jar helloworld.jar
+COPY --from=builder /app/target/helloworld-0.0.1-SNAPSHOT-jar-with-dependencies.jar ./helloworld.jar
 
-ENV PORT 8080
+EXPOSE $PORT
 
-EXPOSE 8080
+# Set the non-root user as current.
+USER $USER
 
 # Run the web service on container startup.
-CMD ["java","-jar","helloworld.jar"]
+CMD ["java","-jar","./helloworld.jar"]
 
