--- a/code-samples/serving/hello-world/helloworld-ruby/Dockerfile
+++ b/code-samples/serving/hello-world/helloworld-ruby/Dockerfile
@@ -2,14 +2,28 @@
 # https://hub.docker.com/_/ruby
 FROM ruby:2.6-slim
 
-# Install production dependencies.
-WORKDIR /usr/src/app
-COPY Gemfile Gemfile.lock ./
+ARG USER=appuser
+ARG USER_UID=1001
+ARG USER_GID=$USER_UID
+
 ENV BUNDLE_FROZEN=true
-RUN gem install bundler && bundle install
+ENV PORT=8080
+
+# Create and change to the app directory.
+WORKDIR "/home/${USER}/app"
+
+# Install production dependencies.
+COPY Gemfile Gemfile.lock ./
+
+RUN addgroup --gid $USER_GID $USER && \
+    adduser -u $USER_UID --ingroup $USER --disabled-password $USER && \
+    gem install bundler && bundle install
 
 # Copy local code to the container image.
-COPY . ./
+COPY app.rb ./
+
+# Set the non-root user as current.
+USER $USER
 
 # Run the web service on container startup.
 CMD ["ruby", "./app.rb"]
