--- a/code-samples/serving/hello-world/helloworld-nodejs/package.json
+++ b/code-samples/serving/hello-world/helloworld-nodejs/package.json
@@ -10,5 +10,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "standard": "^17.1.0"
   }
 }
