fix some cloudevents samples' Dockerfile to run as non-root user
Update README.md file when necessary

--- a/code-samples/serving/cloudevents/cloudevents-rust/Dockerfile
+++ b/code-samples/serving/cloudevents/cloudevents-rust/Dockerfile
@@ -11,10 +11,29 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+FROM rust:1.31.0 AS builder
+
+COPY . ./
+
+RUN rustup target add x86_64-unknown-linux-musl && \
+    cargo build --target x86_64-unknown-linux-musl --release
 
 FROM scratch
 
-# To build it: cargo build --target x86_64-unknown-linux-musl --release
-COPY target/x86_64-unknown-linux-musl/release/knative-cloudevents-example /app
+ARG USER=appuser
+ARG USER_UID=1001
+ARG USER_GID=$USER_UID
 
-CMD ["/app"]
+# Create and change to the app directory.
+WORKDIR "/home/${USER}/app"
+
+# Add a user so the server will run as a non-root user.
+# RUN addgroup -g $USER_GID $USER && \
+#     adduser -u $USER_UID -G $USER -D $USER
+
+# To build it: cargo build --target x86_64-unknown-linux-musl --release
+COPY --from=builder target/x86_64-unknown-linux-musl/release/knative-cloudevents-example ./
+
+# USER $USER
+
+CMD ["./"]
