--- a/code-samples/serving/grpc-ping-go/Dockerfile
+++ b/code-samples/serving/grpc-ping-go/Dockerfile
@@ -35,11 +35,13 @@ RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -tags=grpcping 
 # Use a Docker multi-stage build to create a lean production image.
 # https://docs.docker.com/develop/develop-images/multistage-build/#use-multi-stage-builds
 # https://github.com/GoogleContainerTools/distroless#readme
-FROM gcr.io/distroless/static
+FROM gcr.io/distroless/static:nonroot
+
+WORKDIR "/home/nonroot/app"
 
 # Copy the binaries to the production image from the builder stage.
-COPY --from=builder /go/src/github.com/knative/docs/code-samples/serving/grpc-ping-go/ping-server /server
-COPY --from=builder /go/src/github.com/knative/docs/code-samples/serving/grpc-ping-go/ping-client /client
+COPY --from=builder /go/src/github.com/knative/docs/code-samples/serving/grpc-ping-go/ping-server ./server
+COPY --from=builder /go/src/github.com/knative/docs/code-samples/serving/grpc-ping-go/ping-client ./client
 
 # Run the service on container startup.
-CMD ["/server"]
+CMD ["./server"]
