--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,17 @@ hack/__pycache__
 /temp/
 /temp-blog/
 /blog/site/
-/blog/overrides/
+!/blog/overrides/
+/blog/overrides/*
+!/blog/overrides/assets/
+/blog/overrides/assets/*
+!/blog/overrides/assets/stylesheets
+/blog/overrides/assets/stylesheets/*
+!/blog/overrides/assets/stylesheets/content.css
+!/blog/overrides/partials/
+/blog/overrides/partials/*
+!/blog/overrides/partials/source-file.html
+!/blog/overrides/partials/content.html
 /blog/docs/stylesheets/
 /node_modules/
 venv/
