--- a/blog/mkdocs.yml
+++ b/blog/mkdocs.yml
@@ -71,6 +71,11 @@ plugins:
       as_creation: "date"
       as_update: false
       datetime_format: "%Y-%m-%d"
+  git-revision-date-localized:
+      type: iso_date
+      enable_creation_date: true
+      exclude:
+        - index.md
 
 copyright: "Copyright © 2024 The Knative Authors"
 
