Add edit Button to Documentation Pages
Signed-off-by: Yash Pimple <yash.pimple@vit.edu.in>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ theme:
     - navigation.tabs.sticky
     - navigation.top
     - content.code.copy
+    - content.action.edit
 
 markdown_extensions:
   # - mdx_include:
