--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -71,6 +71,7 @@ nav:
           - articles/ko-fast-kubernetes-microservice-development-in-go.md
           - articles/build-deploy-manage-modern-serverless-workloads-using-knative-on-kubernetes.md
       - Steering Committee:
+          - steering/2024-02-14-trademark-committee-dissolved.md
           - steering/toc-2022-election-announcement.md
           - steering/2022-04-14-annual-report-2021.md
           - steering/knative-and-endusers.md
