--- a/.github/workflows/knative-docs-image.yaml
+++ b/.github/workflows/knative-docs-image.yaml
@@ -42,7 +42,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
           context: ./code-samples/serving/hello-world/helloworld-go
           tags: ghcr.io/knative/helloworld-go:latest
 
@@ -50,6 +50,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
           context: ./docs/serving/autoscaling/autoscale-go
           tags: ghcr.io/knative/autoscale-go:latest
