--- a/config/nav.yml
+++ b/config/nav.yml
@@ -288,6 +288,7 @@ nav:
         - EventType auto creation: eventing/features/eventtype-auto-creation.md
         - Transport Encryption: eventing/features/transport-encryption.md
         - Sender Identity: eventing/features/sender-identity.md
+        - Eventing with Istio: eventing/features/istio-integration.md
       - FAQ: eventing/faq/README.md
     # Eventing reference docs
       - Reference:
