--- a/code-samples/eventing/bookstore-sample-app/slack-sink/slack-sink-camel-pipe.yaml
+++ b/code-samples/eventing/bookstore-sample-app/slack-sink/slack-sink-camel-pipe.yaml
@@ -1,20 +1,20 @@
-apiVersion: camel.apache.org/v1
-kind: Pipe
+apiVersion: camel.apache.org/v1  # Specifies the API version of Camel K.
+kind: Pipe  # This resource type is a Pipe, a custom Camel K resource for defining integration flows.
 metadata:
-  name: slack-sink-pipe
+  name: bookstore-notification-service  # The name of the Pipe, which identifies this particular integration flow.
 spec:
-  source:
+  source:  # Defines the source of events for the Pipe.
     ref:
-      kind: Broker
-      apiVersion: eventing.knative.dev/v1
-      name: book-review-broker
+      kind: Broker  # Specifies the kind of source, in this case, a Knative Eventing Broker.
+      apiVersion: eventing.knative.dev/v1  # The API version of the Knative Eventing Broker.
+      name: book-review-broker  # The name of the Broker, "book-review-broker" in this case
     properties:
-      type: new-review-comment
-  sink:
+      type: new-review-comment  # A filter that specifies the type of events this Pipe will listen for, here it's listening for events of type "new-review-comment". You have to have this type specified.
+  sink:  # Defines the destination for events processed by this Pipe.
     ref:
-      kind: Kamelet
-      apiVersion: camel.apache.org/v1
-      name: slack-sink
+      kind: Kamelet  # Specifies that the sink is a Kamelet, a Camel K component for connecting to external services.
+      apiVersion: camel.apache.org/v1  # The API version for Kamelet.
+      name: slack-sink  # The name of the Kamelet to use as the sink, in this case, a predefined "slack-sink" Kamelet.
     properties:
-      channel: “#bookstore-owner”
-      webhookUrl: <Your Slack Web Hook to the channel above>
+      channel: “#bookstore-owner”  # The Slack channel where notifications will be sent.
+      webhookUrl: "https://hooks.slack.com/services/YOUR/SLACK/WEBHOOK"  # The Webhook URL provided by Slack for posting messages to a specific channel.
