Delete the finished job pod after 50 seconds

--- a/code-samples/eventing/bookstore-sample-app/db-service/400-create-job.yaml
+++ b/code-samples/eventing/bookstore-sample-app/db-service/400-create-job.yaml
@@ -3,6 +3,7 @@ kind: Job
 metadata:
   name: postgresql-job
 spec:
+  ttlSecondsAfterFinished: 50
   template:
     spec:
       containers:
@@ -11,7 +12,20 @@ spec:
           command: ["psql", "-h", "postgresql", "-U", "myuser", "-d", "mydatabase", "-f", "/sql/sample.sql"]
           env:
             - name: PGPASSWORD
-              value: mypassword
+              valueFrom:
+                secretKeyRef:
+                  name: postgresql-secret
+                  key: POSTGRES_PASSWORD
+            - name: PGUSER
+              valueFrom:
+                secretKeyRef:
+                  name: postgresql-secret
+                  key: POSTGRES_USER
+            - name: PGDATABASE
+              valueFrom:
+                secretKeyRef:
+                  name: postgresql-secret
+                  key: POSTGRES_DB
           volumeMounts:
             - name: sql-volume
               mountPath: /sql
@@ -20,4 +34,4 @@ spec:
         - name: sql-volume
           configMap:
             name: sql-configmap
-  backoffLimit: 4
+  backoffLimit: 5
