--- a/code-samples/eventing/bookstore-sample-app/db-service/200-create-postgre.yaml
+++ b/code-samples/eventing/bookstore-sample-app/db-service/200-create-postgre.yaml
@@ -17,11 +17,20 @@ spec:
           image: quay.io/enterprisedb/postgresql
           env:
             - name: POSTGRES_DB
-              value: mydatabase
+              valueFrom:
+                secretKeyRef:
+                  name: postgresql-secret
+                  key: POSTGRES_DB
             - name: POSTGRES_USER
-              value: myuser
+              valueFrom:
+                secretKeyRef:
+                  name: postgresql-secret
+                  key: POSTGRES_USER
             - name: POSTGRES_PASSWORD
-              value: mypassword
+              valueFrom:
+                secretKeyRef:
+                  name: postgresql-secret
+                  key: POSTGRES_PASSWORD
           ports:
             - containerPort: 5432
           volumeMounts:
