Add the sinkBinding

--- a/code-samples/eventing/bookstore-sample-app/db/bookstore-eda/trigger.yaml
+++ b/code-samples/eventing/bookstore-sample-app/db/bookstore-eda/trigger.yaml
@@ -8,4 +8,4 @@ spec:
     ref:
       apiVersion: serving.knative.dev/v1
       kind: Service
-      name: event-display
+      name: sentiment-analysis-app
