--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -50,6 +50,7 @@ nav:
           - articles/demystifying-activator-on-path.md
           - articles/knative-eventing-vision.md
           - articles/new_event_discovery_features.md
+          - articles/getting-started-blog-p3.md
           - articles/getting-started-blog-p2.md
           - articles/getting-started-blog-p1.md
           - articles/getting-started-blog-p0.md
